--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <script src="libraries/p5.min.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.min.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.min.js" type="text/javascript"></script>
+    <script src="piece.js" type="text/javascript"></script>
+    <script src="platform.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
   </head>
-  <body>
-    <h1>Hello P5*</h1>
-  </body>
+  <body></body>
 </html>
